force-app/main/default/objects/TerritoryMapping__mdt/TerritoryMapping__mdt.object-meta.xml
<CustomObject>
    <description>Maps zip/pin codes to Electra Cars dealerships for Agentforce routing.</description>
    <label>Territory Mapping</label>
    <pluralLabel>Territory Mappings</pluralLabel>
</CustomObject>