force-app/main/default/objects/TerritoryMapping__mdt/fields/Dealership_Id__c.field-meta.xml
<CustomField>
    <fullName>Dealership_Id__c</fullName>
    <label>Dealership ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>