force-app/main/default/objects/TerritoryMapping__mdt/fields/Dealership_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealership_Name__c</fullName>
    <label>Dealership Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>